--- a/BattleHub.Web/Shared/MainLayout.razor
+++ b/BattleHub.Web/Shared/MainLayout.razor
@@ -5,23 +5,20 @@
 <RadzenLayout class="rz-shadow-3">
     <RadzenHeader>
         <div class="d-flex align-items-center">
-            <RadzenSidebarToggle Click="@(() => sidebar1Expanded = !sidebar1Expanded)"/>
+            <RadzenSidebarToggle Click="@(() => sidebarExpanded = !sidebarExpanded)"/>
             <RadzenLabel Text="Header"/>
         </div>
     </RadzenHeader>
-    <RadzenSidebar @bind-Expanded="@sidebar1Expanded">
-        <RadzenPanelMenu>
-            <RadzenPanelMenuItem Text="Home" Icon="home"/>
-            <RadzenPanelMenuItem Text="Users" Icon="account_box"/>
-        </RadzenPanelMenu>
+    <RadzenSidebar @bind-Expanded="@sidebarExpanded">
+        <NavMenu></NavMenu>
     </RadzenSidebar>
     <RadzenBody>
         <div class="p-2">
-            Body
+            @Body
         </div>
     </RadzenBody>
 </RadzenLayout>
 
 @code {
-    bool sidebar1Expanded = true;
+    bool sidebarExpanded = true;
 }
